Fix KeyError and parameter mismatch issues
- Fixed ENABLE_IMAGE_COMPRESSION KeyError in hyperzip_main.py with proper backward compatibility
- Fixed parameter mismatch in hyperzip_utils.py process_files_in_folder function
- Fixed PowerShell linting issues in build.ps1 with proper null comparison order
- Added comprehensive build scripts for multiple platforms
- Updated GUI with better error handling and settings management
- Successfully built and tested application

--- a/hyperzip_config.json
+++ b/hyperzip_config.json
@@ -4,16 +4,20 @@
     "winrar_path": "C:\\Program Files\\WinRAR\\WinRAR.exe",
     "sevenzip_path": "C:\\Program Files\\7-Zip\\7z.exe",
     "zpaq_path": "C:\\zpaq\\zpaq.exe",
-    "enable_minification": true,
+    "enable_html_minification": false,
+    "enable_css_minification": true,
+    "enable_js_minification": true,
+    "enable_png_compression": false,
+    "enable_jpeg_compression": true,
     "enable_image_compression": true,
     "tinypng_api_key": "lQymR2XlJmP3Npl4d2nhpCpgsPPCFqV0",
     "png_compressor": "tinypng",
     "png_level_start": 8,
-    "jpeg_quality_start": 90,
+    "jpeg_quality_start": 50,
     "png_level_min": 1,
     "jpeg_quality_min": 20,
     "jpeg_step": 10,
     "find_optimal": true,
-    "max_size_kb": 150.0,
+    "max_size_kb": 350.0,
     "archive_exclusions": "*.ini *.db *.fla *.psd *.pdf *.ai *.zip *.rar *.7z *.zpaq *.DS_Store Thumbs.db *~"
 }
